--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ accelerate>=0.21.0
 av>=11.0.0
 clip @ https://github.com/openai/CLIP/archive/d50d76daa670286dd6cacf3bcd80b5e4823fc8e1.zip#sha256=b5842c25da441d6c581b53a5c60e0c2127ebafe0f746f8e15561a006c6c3be6a
 decord>=0.6.0
-diffusers>=0.24.0
+diffusers==0.24.0
 einops>=0.4.1
 imageio>=2.33.0
 imageio-ffmpeg>=0.4.9
